examples/test/testpolicy13579.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13579
  namespace: namespace234
spec:
  podSelector:
    matchLabels:
      key43: value27
      key25: value40
      key18: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value26
      podSelector:
        matchLabels:
          key44: value16
